--- a/blog-home.html
+++ b/blog-home.html
@@ -8,6 +8,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <img src="img/ajax-loader-333-222-arrows.gif" id="loading-indicator" style="display:none">
                 <a class="navbar-brand" href="index.php">Start Bootstrap</a>
             </div>
 
@@ -31,14 +32,6 @@
 
         <div class="row">
             <div class="col-lg-8">
-
-                <!-- pager -->
-                <ul class="pager">
-                    <li class="previous"><a href="#">&larr; Older</a>
-                    </li>
-                    <li class="next"><a href="#">Newer &rarr;</a>
-                    </li>
-                </ul>
 
             </div>
 
