--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oded Sagir Blog</title>
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <!--http://bootswatch.com/amelia/-->
+    <!--link(href="css/bootstrap_themes/amelia.css", rel="stylesheet")-->
     <link href="css/app.css" rel="stylesheet">
   </head>
   <body>    
