--- a/blog-home.html
+++ b/blog-home.html
@@ -8,8 +8,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img src="img/ajax-loader-333-222-arrows.gif" id="loading-indicator" style="display:none">
-                <a class="navbar-brand" href="index.php">Start Bootstrap</a>
+                <img src="/img/ajax-loader-333-222-arrows.gif" id="loading-indicator" style="display:none">
+                <a class="navbar-brand" href="/">Start Bootstrap</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
