--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oded Sagir Blog</title>
-    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <!--http://bootswatch.com/amelia/-->
-    <!--link(href="css/bootstrap_themes/amelia.css", rel="stylesheet")-->
-    <link href="css/app.css" rel="stylesheet">
+    <!--link(href="/css/bootstrap_themes/amelia.css", rel="stylesheet")-->
+    <link href="/css/app.css" rel="stylesheet">
   </head>
   <body>    
     <nav id="navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -19,8 +19,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img src="img/ajax-loader-333-222-arrows.gif" id="loading-indicator" style="display:none">
-                <a class="navbar-brand" href="index.php">Start Bootstrap</a>
+                <img src="/img/ajax-loader-333-222-arrows.gif" id="loading-indicator" style="display:none">
+                <a class="navbar-brand" href="/">Start Bootstrap</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -112,6 +112,6 @@
     <!-- /.container -->
 
     <script type="text/javascript">var require = { baseUrl: "./" };</script>
-    <script type="text/javascript" data-main="js/app.js" src="bower_components/requirejs/require.js"></script>
+    <script type="text/javascript" data-main="/js/app.js" src="/bower_components/requirejs/require.js"></script>
   </body>
 </html>
