add pushState none hashbang urls

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <img src="/img/ajax-loader-333-222-arrows.gif" id="loading-indicator" style="display:none">
-                <a class="navbar-brand" href="#">A Blog</a>
+                <a class="navbar-brand" href="/">A Blog</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
