--- a/blog-home.html
+++ b/blog-home.html
@@ -30,7 +30,7 @@
 
     <div class="container">
 
-        <div class="row">
+        <div id="main" class="row">
             <div class="col-lg-8">
 
             </div>
