--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="container">
 
-        <div class="row">
+        <div id="main" class="row">
             <div class="col-lg-8">
 
             </div>
