--- a/public/blog-home.html
+++ b/public/blog-home.html
@@ -21,6 +21,8 @@
                     </li>
                     <li><a href="#contact">Contact</a>
                     </li>
+                    <li><a href="#poet">Poet</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
