--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
                     </li>
                     <li><a href="#contact">Contact</a>
                     </li>
+                    <li><a href="#poet">Poet</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
